Changed structure to presenters (and more)
Changed HTTP port to the standard of 80. Added some routes, among others
the graphviz part request. Can be handy to display it after uploading.
Can be used with AJAX.

--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,8 @@ bower_components
 ### Custom: ignore sublime files
 *.sublime-project
 *.sublime-workspace
+# And npmstart.cmd file, as it's only for windows
+npmstart.cmd
 
 
 #################
