Working CADview and database.
I did a LOT today. The database injection using the req object works
great now. I worked on understanding Express.js, integrating a CSS
preprocessor called Stylus, and on getting the /part/:partid/threejson
JSON part retrieval working.
I understand Express/Connect's middleware much better now. app.use()
uses middleware, app.VERB() is a method of app.router which can be
defined explicitly like app.use(app.router) to check all app.VERB()
paths for matches, and then continue.
And I got THREE.js working! Even added great CAD-like view rotation, and
directional lighting originating at the camera, together with ambient
lighting. Oh, and I added asynchronous loading!

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "jade": "*",
     "mongodb": "*",
     "always": "*",
-    "passport": "*"
+    "passport": "*",
+    "stylus": "*"
   },
   "devDependencies": {
     "jasmine-node": "*"
