Rewrote database to use promises. Styled tags.
Edited the unit tests to use promises, and edited the pages where
database is used to use promises.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "mongodb": "*",
     "always": "*",
     "passport": "*",
-    "stylus": "*"
+    "stylus": "*",
+    "when": "*"
   },
   "devDependencies": {
     "jasmine-node": "*"
