Redesign, flat style and Open Sans, moved to LESS
It's looking much better now. I use *Open Sans* for everything, as it
looks great and better than any combination I've tried. Moved to LESS
over Stylus, more flexible and universal.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "mongodb": "*",
     "always": "*",
     "passport": "*",
-    "stylus": "*",
+    "less-middleware": "*",
     "when": "*"
   },
   "devDependencies": {
