Grunt concatenation. Slider mockup on part page.
I set up grunt to concatenate JS and CSS, and uglify and minify it.
Currently I've turned the uglifying off as it consumes too much time.

Added FontAwesome.

Tried importing `slider.less` into `app.less` but this doesn't work, I
don't know why, maybe because of some weird IE-only CSS. But when I
include it in app.less, it does get included so that's what I'm doing
now.

Part page now has slider mockup.

--- a/package.json
+++ b/package.json
@@ -1,20 +1,27 @@
 {
   "name": "parametric-rc-parts-com",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "always app.js"
   },
   "dependencies": {
-    "express": "3.4.8",
+    "express": "~3.4.8",
     "jade": "*",
     "mongodb": "*",
     "always": "*",
     "passport": "*",
-    "less-middleware": "*",
     "when": "*"
   },
   "devDependencies": {
-    "jasmine-node": "*"
+    "jasmine-node": "*",
+    "grunt": "*",
+    "grunt-contrib-jshint": "*",
+    "grunt-contrib-nodeunit": "*",
+    "grunt-contrib-uglify": "*",
+    "grunt-contrib-less": "*",
+    "grunt-browserify": "*",
+    "grunt-contrib-watch": "*",
+    "grunt-contrib-concat": "*"
   }
 }
